# dfrobot_environmental_sensor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: .release-please-manifest.json  dependabot.yaml  release-please-config.json
.github/workflows/: .release-please-manifest.json  auto-merge-dependabot.yaml  lint.yml  publish.yaml  release-please.yaml  tests.yml
dfrobot_environmental_sensor/: __init__.py  constants.py  core.py  transports.py
examples/: print_all_measurements.py  read_all.py
python/raspberry/: DFRobot_Environmental_Sensor.py
python/raspberry/examples/: V3_0.py
tests/: conftest.py
